# cublass_gemm

./: .gitignore  CMakeLists.txt  README.md
cuda/: 1d_blocktiling.cu  2d_blocktiling.cu  cublas.cu  cublass.cu  kernel.cu  memory_coalescing.cu  naive.cu  smem_tiling.cu
inc/: benchmark_collector.hpp  kernel.cuh  kernel.hpp  kernel_runner.hpp  macro.hpp  matrix_data.hpp  utils.hpp
inc/device/: matrix.hpp
inc/host/: matrix.hpp
inc/kernels/: 1d_blocktiling.cuh  2d_blocktiling.cuh  cublas.cuh  cublass.cuh  memory_coalescing.cuh  naive.cuh  smem_tiling.cuh
results/: cublass.txt  memory_coalescing.txt  naive.txt
scripts/: plot.py
src/: benchmark_collector.cpp  kernel_runner.cpp  main.cpp  matrix_data.cpp
src/device/: matrix.cpp
src/host/: matrix.cpp
